--- a/index.css
+++ b/index.css
@@ -1,6 +1,16 @@
+@font-face {
+  font-family: Inconsolata;
+  src: url(/assets/Inconsolata-VariableFont_wdth\,wght.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-family: Inconsolata;
+}
+
+body {
+  background-color: rgb(255, 250, 246);
 }
 
 p {
@@ -62,7 +72,7 @@ main {
 #project-container {
   margin-bottom: 20px;
   background-color: antiquewhite;
-  padding: 15px;
+  padding: 20px;
 }
 
 #container-about {
@@ -70,7 +80,12 @@ main {
   margin-bottom: 25px;
 }
 #container-about p {
-  margin-bottom: 2px;
+  margin-bottom: 5px;
+}
+
+#header-tech {
+  margin-top: 2px;
+  font-size: 16px;
 }
 
 #container-footer {
@@ -81,12 +96,6 @@ main {
 @media only screen and (max-width: 800px) {
   main {
     width: 70%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
   }
 }
 
