--- a/index.css
+++ b/index.css
@@ -93,15 +93,21 @@ main {
   justify-content: space-between;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1100px) {
   main {
     width: 70%;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
   main {
-    width: 100%;
-    padding: 0px;
+    width: 90%;
+    padding: 0;
+    padding-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #project-container {
   }
 }
